2005-07-19  Mark McLoughlin  <mark@skynet.ie>

	See http://mail.gnome.org/archives/desktop-devel-list/2005-July/msg00341.html

	* capplets/wm-properties/*: remove old crufty code.

2005-07-17  Sven Herzberg  <herzi@gnome-de.org>

	* configure.in: use pkg-config to check for xcursor

2005-07-13  Sebastien Bacher  <seb128@debian.org>

	* configure.in: update to 2.11.7.

==================== 2.11.6 ===================	

2005-07-13  Sebastien Bacher  <seb128@debian.org>

	* NEWS: updated for 2.11.6.

2005-07-08  Sebastien Bacher  <seb128@debian.org>

	* configure.in: updated the libxft requirement to 2.1.7, 
	Christian Lohmaier <cloph@cup.uni-muenchen.de> (Closes: #309558).

2005-07-08  Sebastien Bacher  <seb128@debian.org>

	* NEWS: updated.

2005-07-07  Sebastien Bacher  <seb128@debian.org>

	* schemas/Makefile.am: fix a typo with a .schemas name, 
	Jan Schmidt <thaytan@mad.scientist.com> (Closes: #307388).

2005-07-05  Sebastien Bacher  <seb128@debian.org>

	* configure.in: update to 2.11.6.

==================== 2.11.5 ===================
	
2005-07-05  Sebastien Bacher  <seb128@debian.org>

	* configure.in: build the new capplet by default.

2005-06-22  Diego Gonzalez <diego@pemas.net>

        * configure.in: add code to conditionally enable the compilation of
	  the about-me capplet
        * capplets/Makefile.am: ditto

2005-06-12  Sebastien Bacher  <seb128@debian.org>

	* configure.in: update to 2.11.5

==================== 2.11.4 ===================
	
2005-06-12  Sebastien Bacher  <seb128@debian.org>

	* configure.in: update the version to 2.11.4

2005-06-12  Sebastien Bacher  <seb128@debian.org>

	* NEWS:
	* configure.in: 2.11.3.1 bug fix.

2005-06-10  Sebastien Bacher  <seb128@debian.org>

	* configure.in: update for 2.11.4
	
==================== 2.11.3 ===================
	
2005-05-22  Sebastien Bacher  <seb128@debian.org>

	* ChangeLog capplets/about-me/e-image-chooser.c 
	capplets/accessibility/at-properties/at-startup-session.h 