@@ -1,3 +1,10 @@
+2005-07-20  Rodrigo Moya <rodrigo@novell.com>
+
+	* control-center.spec.in: require either xscreensaver or gnome-screensaver.
+
+	* schemas/apps_gnome_settings_daemon_screensaver.schemas.in: don't
+	mention explicitly xscreensaver, but "generic screen saver".
+	
 2005-07-19  Mark McLoughlin  <mark@skynet.ie>
 
 	See http://mail.gnome.org/archives/desktop-devel-list/2005-July/msg00341.html
